--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,13 @@
 
 .App-logo {
   height: 40vmin;
+  border-radius: 50%;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 5s linear;
   }
 }
 
